add test for splitting when player stands immediately